# cpothero

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  build.ninja  cmake_install.cmake  engine.cpp  engine.h  env.h  eval.cpp  eval.h  learn.cpp  learn.h  main  main.c  main.cpp  othero.cpp  othero.h  solve.cpp  solve.h  staticEvalBoard1.txt  staticEvalBoard2.txt  tags
.ccls-cache/@@home@user@cpothero/: @usr@include@alloca.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  (+46 more)
endgame/: ffo40.txt  syuuban2.txt  syuuban3.txt  syuuban4.txt  syuuban5.txt
engine/: nteyomi.cpp  nteyomi.h  one.cpp  one.h  rand_ai.cpp  rand_ai.h  static.cpp  static.h
eval/: cr.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  eg.txt  h2.txt  h3.txt  h4.txt
kif/: 100.txt
test/: aitest.cpp  aitest.h
(+3 files in other folders)
